--- a/client/css/main.css
+++ b/client/css/main.css
@@ -964,6 +964,9 @@ select {
 .form-index {
   margin-top: 150px; }
 
+.uploadQuery {
+  margin-bottom: 20px; }
+
 .main-panel {
   margin-top: 150px; }
 
