--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -15,7 +15,7 @@
                         <a class="page-scroll" href="#main-discription">Why Save food</a>
                     </li>
                     <li>
-                        <a ng-click="getShops()" class="page-scroll" href="#!/uploadShop">Add Shops</a>
+                        <a  class="page-scroll" href="#!/uploadShop">Add Shops</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#!/uploadProducts">Add Products </a>
