styles and shop filter

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -31,7 +31,7 @@ body {
   display: inline-block; }
 
 #main-title {
-  font-size: 50px; }
+  font-size: 300%; }
 
 #mainNav {
   background-color: #484a4c;
@@ -944,6 +944,13 @@ select {
 
 #shop-name {
   justify-content: center; }
+
+#products {
+  padding-left: 10px; }
+
+.list-categories {
+  padding-left: 30px;
+  padding-right: 30px; }
 
 /****** shops.html *******/
 .shop-name {
