--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -156,3 +156,12 @@ select {
 #shop-name {
   justify-content: center;
 }
+
+#products {
+  padding-left: 10px;
+}
+
+.list-categories {
+  padding-left:30px;
+  padding-right: 30px;
+}
