--- a/client/templates/shops.html
+++ b/client/templates/shops.html
@@ -6,8 +6,8 @@
        
         <div id="products" class="list-products">
             <ul class="list-unstyled list-products">
-                <li ng-repeat="product in allProducts | filter : {shop.id: '593bfe1142fd001cd834a04d'}" >
-                 <p>{{product.shop._id}}</p>
+                <li ng-repeat="product in allProducts | filter: {shop: {_id: '593bfe1142fd001cd834a04d'}}" >
+                 <p>{{shopId}}</p>
                     <div class="thumbnail">
                         <p>-{{ product.discount }}%</p>
                         
