--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -14,14 +14,14 @@
             <a type="button" ng-model="butchery" ng-click="showButchery()" class="list-group-item">Butchery</a>
             <a type="button" ng-model="showAll" ng-click="showAll()" class="list-group-item">See All Categories</a>
         </div>
-        <p class="lead1">Distance</p>
+        <!-- <p class="lead1">Distance</p>
         <select class="distance-select">
             <option>+ 1 km</option>
             <option>+ 2 km</option>
             <option>+ 3 km</option>
             <option>+ 5 km</option>
             <option>+ 10 km</option>
-        </select>
+        </select> -->
     </div>
     <div class="col-md-9">
         <p class="result-input">Searching for: {{query}}</p>
