--- a/client/templates/uploadProducts.html
+++ b/client/templates/uploadProducts.html
@@ -1,5 +1,5 @@
 
-<div class="container form-index" data-ng-init="getProducts()">
+<div class="container form-index" >
     <div class="row">
         <div class="panel-group">
             <div class="panel panel-default">
@@ -21,7 +21,7 @@
                             <div class="col-md-4">
                                 <label for="discountProduct">Discount</label>
                                 <div class="input-group" id="input-group-1">
-                                    <input ng-model="discount" name="discountProduct" type="text" class="form-control" id="content-1">
+                                    <input ng-model="discount" name="discountProduct" type="text" class="form-control" id="content-1" placeholder="Percentage discount (%)">
                                 </div>
                                 <!-- /input-group -->
                             </div>
