--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -6,7 +6,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a id="main-title" class="navbar-brand page-scroll" href="#!">Zero waste</a>
+                <a id="main-title" class="navbar-brand page-scroll" href="#!/products">Zero waste</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
