--- a/client/css/main.css
+++ b/client/css/main.css
@@ -972,7 +972,8 @@ select {
   margin-top: 150px; }
 
 .uploadQuery {
-  margin-bottom: 20px; }
+  margin-top: 20px;
+  margin-bottom: 50px; }
 
 .panel-heading {
   font-size: 20px; }
@@ -981,10 +982,15 @@ select {
   margin-top: 25px; }
 
 .main-panel {
-  margin-top: 150px; }
+  margin-top: 30px; }
 
 #panel-image {
   width: 50px; }
+
+#prod-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px; }
 
 #main > * {
   margin-top: 60px;
