--- a/client/templates/uploadShop.html
+++ b/client/templates/uploadShop.html
@@ -36,7 +36,7 @@
                                 <p>{{info}}</p>
                             </div>
                             <!--  Get the coordenates -->
-                            <div class=" hidden form-group">
+                            <div class=" form-group">
                                 <label for="shopCord">Address</label>
                                 <input ng-model="address" name="shopCord" type="text" class="form-control" id="input-code" >
                                 <input ng-value="{{ lat }}" ng-model="lat" required>
