--- a/client/templates/shops.html
+++ b/client/templates/shops.html
@@ -1,22 +1,17 @@
 <div class="shop-name">
     <p>PESCADOS SEPAL SL</p>
 </div>
-<div class="col-md-9">
+
         <p class="result-input">Searching for: {{query}}</p>
-       
         <div id="products" class="list-products">
+       
             <ul class="list-unstyled list-products">
-                <li ng-repeat="product in allProducts | filter: {shop: {_id: '593bfe1142fd001cd834a04d'}}" >
-                 <p>{{shopId}}</p>
+                <li ng-repeat="product in allProducts | filter: {shop: {_id: shopId}}" >
                     <div class="thumbnail">
                         <p>-{{ product.discount }}%</p>
-                        
                         <img class="discount" src="img/plaindiscount.png"></img>
                         <div class="container-image">
                             <div class="img-bg" ng-style="{'background-image':'url({{product.image}})'}" ng-alt="{{ product.name }}">
-                                <div class="cover-hover">
-                                    <p><a data-toggle="modal" data-target="#modalProduct_{{ product._id }}"><i class="glyphicon glyphicon-zoom-in"></i></a></p>
-                                </div>
                             </div>
                             <div class="caption">
                                 <h4 class="pull-right">now {{ product.price*(1-(product.discount/100)) | number: 2  }}€</h4>
