--- a/client/templates/uploadShop.html
+++ b/client/templates/uploadShop.html
@@ -29,6 +29,8 @@
                                 <option name="shopAddress">butchery</option>
                             </select>
                         </div>
+                        <!-- City:<input type="text" name="cityname" ng-model="trader.cityname"   googleplace="" > -->
+                         
                         <div class="row">
                             <div class="col-md-9 form-group">
                                 <label for="shopAddress">Address</label>
@@ -58,9 +60,25 @@
                             </div> -->
                         <button ng-click="addShop()" type="submit" class="btn btn-default">Submit</button>
                     </form>
+
                 </div>
                 <!-- END panel-body -->
+
             </div>
         </div>
     </div>
 </div>
+<!-- <div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Basic Usage</h1>
+
+            <form class="form">
+                <input class="form-control" g-places-autocomplete ng-model="place"/>
+            </form>
+
+            <h5>Result:</h5>
+            <pre>{{place | json }}</pre>
+        </div>
+    </div>
+</div> -->
