--- a/client/templates/products.html
+++ b/client/templates/products.html
@@ -11,6 +11,7 @@
             <a type="button" ng-model="supermaket" ng-click="showQuery()" class="list-group-item">Supermaket</a>
             <a type="button" ng-model="fishShop" ng-click="showFishShop()" class="list-group-item">Fish Shops</a>
             <a type="button" ng-model="bakery" ng-click="showBakery()" class="list-group-item">Bakery</a>
+            <a type="button" ng-model="Fruit" ng-click="showFruit()" class="list-group-item">Fruit & vegetables</a>
             <a type="button" ng-model="butchery" ng-click="showButchery()" class="list-group-item">Butchery</a>
             <a type="button" ng-model="showAll" ng-click="showAll()" class="list-group-item">See All Categories</a>
         </div>
