--- a/client/templates/uploadShop.html
+++ b/client/templates/uploadShop.html
@@ -26,6 +26,7 @@
                                 <option name="shopAddress">supermaket</option>
                                 <option name="shopAddress">fishShop</option>
                                 <option name="shopAddress">bakery</option>
+                                <option name="shopAddress">Fruit And Vegetables</option>
                                 <option name="shopAddress">butchery</option>
                             </select>
                         </div>
